Так отлежалось и работает)

--- a/WpfApp1/App.config
+++ b/WpfApp1/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="myConnectionString"
-         connectionString="DATA SOURCE=localhost:1521/orcl;USER ID = SYS;PASSWORD = 3aPa3a19892811;DBA PRIVILEGE = SYSDBA;"
+         connectionString="DATA SOURCE=localhost:1521/orcl;USER ID = SYS;PASSWORD = 3aPa3a19892811;DBA PRIVILEGE = SYSDBA"
          providerName="Oracle.ManagedDataAccess.Client"/>
   </connectionStrings>
     <startup> 
